# json_type_hinting

./: pyproject.toml
json_protocol/: __init__.py  json_protocol.py
pycharm.run/: pytest for tests.run.xml
tests/: definitions.py  test_some.py
